Refactor and share pcodeextractor path in tests