@@ -16,7 +16,6 @@ import ghidra.test.TestEnv;
 import ghidra.util.task.TaskMonitor;
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -28,11 +27,19 @@ import org.junit.Test;
 public class GenerateInputsTest extends AbstractGhidraHeadlessIntegrationTest {
   private static TestEnv env;
 
+  private static String pcodeExtractorDir;
+
   private static Program program;
 
   @Before
   public void setUp() throws IOException {
     env = new TestEnv(this.getClass().getName());
+
+    pcodeExtractorDir =
+        new File(
+                System.getProperty("user.dir")
+                    + "/../binary_type_inference/cwe_checker/src/ghidra/p_code_extractor")
+            .getCanonicalPath();
   }
 
   @After
@@ -65,14 +72,7 @@ public class GenerateInputsTest extends AbstractGhidraHeadlessIntegrationTest {
 
     PreservedFunctionList pl = PreservedFunctionList.createFromExternSection(program);
 
-    var inf =
-        new BinaryTypeInference(
-            program,
-            pl,
-            List.of(
-                "/Users/ian/Code/BTIGhidra/binary_type_inference/cwe_checker/src/ghidra/p_code_extractor"),
-            null,
-            false);
+    var inf = new BinaryTypeInference(program, pl, List.of(pcodeExtractorDir), null, false);
     var const_types = inf.produceArtifacts();
 
     assertTrue("lattice file exists", inf.getLatticeJsonPath().toFile().exists());
@@ -123,14 +123,7 @@ public class GenerateInputsTest extends AbstractGhidraHeadlessIntegrationTest {
 
     PreservedFunctionList pl = PreservedFunctionList.createFromExternSection(program);
 
-    var inf =
-        new BinaryTypeInference(
-            program,
-            pl,
-            Arrays.asList(
-                "/Users/ian/Code/BTIGhidra/binary_type_inference/cwe_checker/src/ghidra/p_code_extractor"),
-            null,
-            true);
+    var inf = new BinaryTypeInference(program, pl, List.of(pcodeExtractorDir), null, true);
     var const_types = inf.produceArtifacts();
 
     assertTrue("lattice file exists", inf.getLatticeJsonPath().toFile().exists());
@@ -187,11 +180,6 @@ public class GenerateInputsTest extends AbstractGhidraHeadlessIntegrationTest {
 
     PreservedFunctionList pl = new PreservedFunctionList(pres);
 
-    String pcodeExtractorDir =
-        new File(
-                System.getProperty("user.dir")
-                    + "/../binary_type_inference/cwe_checker/src/ghidra/p_code_extractor")
-            .getCanonicalPath();
     var inf = new BinaryTypeInference(program, pl, List.of(pcodeExtractorDir), null, false);
     var const_types = inf.produceArtifacts();
 
